--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,15 +8,18 @@
 </head>
 <body>
     <h1>Blood Donor App</h1>
-    <p>Add a new donor</p>
-    <input type="text" id="name" placeholder="Name">
-    <input type="text" id="bloodType" placeholder="Blood Type (e.g. A+)">
-    <button onclick="addDonor()">Add Donor</button>
+    <form id="add-form">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" placeholder="Name">
+        <label for="bloodType">Blood Type (e.g. A+):</label>
+        <input type="text" id="bloodType" name="bloodType" placeholder="Blood Type">
+        <button type="submit">Add Donor</button>
+    </form>
 
     <p>Donors List</p>
     <ul id="donors"></ul>
 
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
-</html>
+
